--- a/Projeto/src/main/webapp/WEB-INF/web.xml
+++ b/Projeto/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>resources</param-value>
+			<param-value>voluntier.resources</param-value>
 		</init-param>
 		<init-param>
 			<param-name>jersey.config.server.provider.scanning.recursive</param-name>
@@ -21,7 +21,7 @@
 		</init-param>
 		<init-param>
 			<param-name>jersey.config.server.provider.classnames</param-name>
-			<param-value>filters.AdditionalResponseHeadersFilter</param-value>
+			<param-value>voluntier.filters.AdditionalResponseHeadersFilter</param-value>
 		</init-param>
 		<init-param>
 			<param-name>jersey.config.servlet.filter.contextPath</param-name>
