--- a/Projeto/pom.xml
+++ b/Projeto/pom.xml
@@ -138,6 +138,13 @@
 			<version>1.6.2</version>
 		</dependency>
 
+		<!-- argon2 -->
+		<dependency>
+			<groupId>de.mkammerer</groupId>
+			<artifactId>argon2-jvm</artifactId>
+			<version>2.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
