--- a/Projeto/src/main/webapp/WEB-INF/web.xml
+++ b/Projeto/src/main/webapp/WEB-INF/web.xml
@@ -5,16 +5,20 @@
 	version="3.1">
 	<display-name>VolunTier</display-name>
 	<welcome-file-list>
-		<welcome-file>Home.html</welcome-file>
+		<welcome-file>pages/index.html</welcome-file>
 	</welcome-file-list>
 	
 	<error-page>
 		<error-code>404</error-code>
-		<location>/www/pages/error/404.html</location>
+		<location>/pages/error/404.html</location>
 	</error-page>
 	<error-page>
 		<error-code>500</error-code>
-		<location>/www/pages/error/5XX.html</location>
+		<location>/pages/error/500.html</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/pages/error/403.html</location>
 	</error-page>
 	
 	<servlet>
