--- a/Projeto/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
+++ b/Projeto/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
@@ -1,4 +1,4 @@
-account.email=t.morais@campus.fct.unl.pt
+account.email=me.franca@campus.fct.unl.pt
 eclipse.preferences.version=1
 include.optional.configuration.files=true
 project.bucket=
