--- a/Projeto/pom.xml
+++ b/Projeto/pom.xml
@@ -142,6 +142,13 @@
 			<artifactId>argon2-jvm</artifactId>
 			<version>2.5</version>
 		</dependency>
+		
+		<!-- string utils -->
+		<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
+        </dependency>
 
 	</dependencies>
 
