moedas + pequenas alteracoes

--- a/Projeto/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
+++ b/Projeto/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
@@ -1,4 +1,4 @@
-account.email=voluntier.devs@gmail.com
+account.email=j.palmeiro@campus.fct.unl.pt
 eclipse.preferences.version=1
 include.optional.configuration.files=true
 project.bucket=
