--- a/Projeto/src/main/webapp/WEB-INF/index.yaml
+++ b/Projeto/src/main/webapp/WEB-INF/index.yaml
@@ -2,6 +2,6 @@ indexes:
 
 - kind: User
   properties:
-  - name: total_currency
+  - name: n_user_events_participated
     direction: desc
   - name: username
